<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/authui_colorAccent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_margin_10dp"
            android:src="@mipmap/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_employee"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boundary">

                <EditText
                    android:id="@+id/edEmpName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/employee_name"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="@dimen/padding_margin_10dp"
                    android:textSize="@dimen/text_12sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_margin_5dp"
                android:background="@drawable/boundary">

                <EditText
                    android:id="@+id/edEmEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="@dimen/padding_margin_10dp"
                    android:textSize="@dimen/text_12sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_margin_5dp"
                android:background="@drawable/boundary">

                <EditText
                    android:id="@+id/edEmpPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="@dimen/padding_margin_10dp"
                    android:textSize="@dimen/text_12sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_margin_5dp"
                android:background="@drawable/boundary">

                <EditText
                    android:id="@+id/edEmpCPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirm_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="@dimen/padding_margin_10dp"
                    android:textSize="@dimen/text_12sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnAddEmp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_margin_10dp"
                android:background="@color/authui_colorAccent"
                android:padding="@dimen/padding_margin_10dp"
                android:text="@string/add_employee"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>